src/components/Board/Board.module.css
.board {
    display: flex;
    flex-flow: column;
    gap: 1rem;
    max-width: 95svh;
    max-height: 95svh;
    padding: 1rem;
    place-content: center;
    background-image: url('/img/wood-texture.jpg');
    background-size: cover;
    background-position: center;
}

.row {
    display: flex;
    max-height: 5%;
    flex-flow: row nowrap;
    gap: 1rem;
    place-content: center;
}

.item {
    width: 10%;
    aspect-ratio: 1;
    display: flex;
    place-content: center;
    place-items: center;
    box-shadow: 1px 1px 1rem black;
    padding: 0.33rem;
}

.white {
    background-color: white;
    background-image: linear-gradient(331deg, #fff5c8, rgb(255, 239, 217));
    color: black;
}

.black {
    background-color: black;
    background-image: linear-gradient(331deg, #534633, rgb(95, 71, 50));
    color: white;
}

.highlight {
    border: 2px solid limegreen;
}

